@@ -812,7 +812,7 @@ function get_event_types () {
 	$types['recon_host_detected'] = __('Recon host detected');
 	$types['system'] = __('System');
 	$types['error'] = __('Error');
-	$types['configuration_change'] = __('configuration change ');
+	$types['configuration_change'] = __('Configuration change ');
 	
 	if (isset($config['text_char_long'])) {
 		foreach ($types as $key => $type) {
