@@ -1,3 +1,12 @@
+2012-04-02  Sergio Martin <sergio.martin@artica.es>
+
+	* include/functions_reporting.php
+	include/functions.php: Fixed little bugs
+	of the inventory reports and translation strings
+
+	* operation/reporting/reporting_viewer.php: Added fixed
+	configuration line of the pickdate jquery control
+
 2012-04-02 Dario Rodriguez <dario.rodriguez@artica.es>
 
 	*operation/visual_console/render_view.php,
